--- a/web/src/Pages/Home/styles.css
+++ b/web/src/Pages/Home/styles.css
@@ -1,7 +1,7 @@
 #page-home {
   height: 100vh;
 
-  background: url('../../assets/home-background.svg') no-repeat 600px top;
+  background: url('../../assets/home-background.svg') no-repeat 80% top;
 }
 
 #page-home .content {
