--- a/web/src/Pages/CreatePontoColeta/styles.css
+++ b/web/src/Pages/CreatePontoColeta/styles.css
@@ -3,11 +3,11 @@
   max-width: 1100px;
 
   margin: 0 auto;
+  padding: 0 0.5rem;
 }
 
 #page-create-point header {
-  margin-top: 48px;
-
+  margin-top: 12px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -23,13 +23,13 @@
 }
 
 #page-create-point header a svg {
-  margin-right: 16px;
+  margin-right: 8px;
   color: var(--primary-color);
 }
 
 #page-create-point form {
-  margin: 80px auto;
-  padding: 64px;
+  margin: 40px auto;
+  padding: 16px;
   max-width: 730px;
   background: #FFF;
   border-radius: 8px;
@@ -43,7 +43,7 @@
 }
 
 #page-create-point form fieldset {
-  margin-top: 64px;
+  margin-top: 32px;
   min-inline-size: auto;
   border: 0;
 }
@@ -53,7 +53,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 #page-create-point form legend h2 {
@@ -69,6 +69,7 @@
 #page-create-point form .field-group {
   flex: 1;
   display: flex;
+  flex-direction: column;
 }
 
 #page-create-point form .field {
@@ -117,9 +118,9 @@
   cursor: not-allowed;
 }
 
-#page-create-point form .field-group .field + .field {
+/* #page-create-point form .field-group .field + .field {
   margin-left: 24px;
-}
+} */
 
 #page-create-point form .field-group input + input {
   margin-left: 24px;
@@ -146,7 +147,8 @@
 }
 
 #page-create-point form button {
-  width: 260px;
+  /* width: 260px; */
+  width: 100%;
   height: 56px;
   background: var(--primary-color);
   border-radius: 8px;
@@ -166,7 +168,7 @@
 
 .items-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 16px;
   list-style: none;
 }
@@ -200,4 +202,39 @@
 .items-grid li.selected {
   background: #E1FAEC;
   border: 2px solid #34CB79;
+}
+
+@media screen and (min-width: 768px) {
+  #page-create-point {
+    padding: 0 1rem;
+  }
+  #page-create-point header {
+    margin-top: 24px;
+  }
+
+  #page-create-point form {
+    margin: 40px 0;
+  }
+
+  #page-create-point form .field-group {
+    flex-direction: row;
+  }
+
+  #page-create-point form .field-group .field + .field {
+    margin-left: 24px;
+  }
+
+  .items-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  #page-create-point, #page-create-point form {
+    max-width: 950px;
+  }
+
+  #page-create-point form button {
+    width: calc(100%/3 - 16px + 4px);
+  }
 }
